--- a/src/scss/sections/_works.scss
+++ b/src/scss/sections/_works.scss
@@ -28,6 +28,8 @@
             justify-content: center;
             gap: 75px;
 
+            // TODO done projects cards
+
             .works__item {
                 background-color: $elements-bg-dark;
                 border-radius: 30px;
