done 'my works' section, working on 'contact'

--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -5,3 +5,19 @@
 body {
     background-color: $bg-primary-dark;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: $elements-bg-dark;
+}
+
+::-webkit-scrollbar-thumb {
+    background: lighten($elements-bg-dark, 10%);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: lighten($elements-bg-dark, 15%);
+}
