--- a/src/scss/sections/_works.scss
+++ b/src/scss/sections/_works.scss
@@ -2,39 +2,58 @@
     padding: 65px 0 75px 0;
     background-color: $bg-secondary-dark;
 
-    .container {
+    &__container {
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
 
-        h2 {
-            margin-bottom: 55px;
-        }
+    &__title {
+        margin-bottom: 55px;
+    }
 
-        p {
-            width: 482px;
-            font-size: 24px;
-            line-height: 30px;
-            text-align: center;
-            color: $text-secondary-dark;
-            margin-bottom: 75px;
-        }
+    &__text {
+        width: 482px;
+        text-align: center;
+        margin-bottom: 75px;
+    }
 
-        .works__items {
-            width: 100%;
-            display: grid;
-            grid-template-columns: repeat(3, 300px);
-            grid-template-rows: repeat(2, 345px);
-            justify-content: center;
-            gap: 75px;
+    &__items {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 300px);
+        grid-template-rows: repeat(2, 345px);
+        justify-content: center;
+        gap: 75px;
+    }
 
-            // TODO done projects cards
+    &__item {
+        background-color: $elements-bg-dark;
+        border-radius: 30px;
+        overflow: hidden;
+        position: relative;
+    }
 
-            .works__item {
-                background-color: $elements-bg-dark;
-                border-radius: 30px;
-                overflow: hidden;
-            }
-        }
+    &__item-overlay {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        position: absolute;
+        background: rgba(22, 22, 22, 0.863);
+        backdrop-filter: blur(5.5px);
+        -webkit-backdrop-filter: blur(5.5px);
+    }
+
+    &__item-text {
+        font-size: 32px;
+        line-height: 40px;
+        text-align: center;
+        color: $text-secondary-dark;
+        margin-bottom: 30px;
     }
 }
