--- a/src/scss/sections/_works.scss
+++ b/src/scss/sections/_works.scss
@@ -1,5 +1,5 @@
 .works {
-    padding: 65px 0 75px 0;
+    padding: 65px 20px 75px 20px;
     background-color: $bg-secondary-dark;
 
     &__container {
