--- a/src/scss/sections/_main.scss
+++ b/src/scss/sections/_main.scss
@@ -1,11 +1,18 @@
 .main {
-    padding: 90px 0 90px 0;
+    padding: 90px 20px 90px 20px;
 
     &__container {
         display: grid;
-        grid-template-columns: 1.2fr 1fr;
+        grid-template-columns: repeat(auto-fill, 1fr);
         justify-items: center;
         align-items: center;
+        justify-content: center;
+        gap: 50px;
+    }
+
+    &__content {
+        // min-width: 0px;
+        // max-width: 200px;
     }
 
     &__title {
@@ -20,10 +27,6 @@
 
     &__text {
         margin-bottom: 33px;
-    }
-
-    &__emoji {
-        margin-top: -60px;
     }
 
     &__buttons {
