--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -21,3 +21,9 @@ $text-secondary-light: #292929;
 $elements-bg-light: #999999;
 
 $accent-color-light: #FC815F;
+
+// font variables
+
+$title-size: 40px;
+$text-size: 20px;
+$button-text-size: 25px;
