--- a/src/scss/sections/_contact.scss
+++ b/src/scss/sections/_contact.scss
@@ -7,7 +7,7 @@
 
     &__grid {
         display: grid;
-        grid-template-columns: repeat(auto-fill, 520px);
+        grid-template-columns: repeat(auto-fill, minmax(200px, 520px));
         align-items: center;
         justify-items: center;
         justify-content: center;
@@ -78,7 +78,7 @@
         padding: 10px;
         background-color: $accent-color-dark;
         color: darken($text-secondary-dark, 5%);
-        font-size: 24px;
+        font-size: $button-text-size;
         border-radius: 30px;
         border: none;
         cursor: pointer;
