--- a/src/scss/sections/_main.scss
+++ b/src/scss/sections/_main.scss
@@ -3,26 +3,24 @@
 
     &__container {
         display: grid;
-        grid-template-columns: repeat(auto-fill, 1fr);
+        grid-template-columns: repeat(auto-fill, minmax(100px, 550px));
         justify-items: center;
         align-items: center;
         justify-content: center;
-        gap: 50px;
+        gap: 20px;
     }
 
     &__content {
-        // min-width: 0px;
-        // max-width: 200px;
+        max-width: 100%;
     }
 
     &__title {
-        font-size: 48px;
-        color: $text-primary-dark;
-        line-height: 60px;
+        line-height: 45px;
         margin-bottom: 33px;
-        font-weight: medium;
+        text-align: left;
+        text-transform: none;
 
-        @include span-accent-bg(-3px);
+        @include span-accent-bg(-2px);
     }
 
     &__text {
@@ -31,7 +29,8 @@
 
     &__buttons {
         display: flex;
-        gap: 48px;
+        justify-content: space-between;
+        flex-wrap: wrap;
     }
 
     &__button {
@@ -39,9 +38,9 @@
         display: flex;
         justify-content: center;
         gap: 14px;
-        min-width: 230px;
+        width: 250px;
         height: 70px;
-        font-size: 30px;
+        font-size: $button-text-size;
         line-height: 18px;
         background-color: $accent-color-dark;
         border-radius: 100px;
@@ -56,7 +55,6 @@
         }
 
         &:last-of-type {
-            min-width: 250px;
             background-color: transparent;
         }
 
