--- a/src/scss/sections/_works.scss
+++ b/src/scss/sections/_works.scss
@@ -13,7 +13,7 @@
     }
 
     &__text {
-        width: 482px;
+        max-width: 482px;
         text-align: center;
         margin-bottom: 75px;
     }
