--- a/src/scss/sections/_works.scss
+++ b/src/scss/sections/_works.scss
@@ -21,8 +21,9 @@
     &__items {
         width: 100%;
         display: grid;
-        grid-template-columns: repeat(auto-fill, 300px);
+        grid-template-columns: repeat(auto-fill, minmax(100px, 300px));
         grid-template-rows: repeat(2, 345px);
+        grid-auto-rows: 345px;
         justify-content: center;
         gap: 75px;
     }
@@ -32,6 +33,12 @@
         border-radius: 30px;
         overflow: hidden;
         position: relative;
+    }
+
+    &__item-img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     &__item-overlay {
