done light theme

--- a/src/scss/_reusables.scss
+++ b/src/scss/_reusables.scss
@@ -5,7 +5,7 @@
     text-align: center;
     color: $text-primary-dark;
 
-    @include span-accent-bg;
+    @include span-accent-bg(-1.8%, $accent-color-dark);
 }
 
 .text {
