--- a/src/scss/sections/_works.scss
+++ b/src/scss/sections/_works.scss
@@ -29,7 +29,7 @@
     }
 
     &__item {
-        background-color: $elements-bg-dark;
+        background: url(src/img/other/project-placeholder.webp) center center / 110% no-repeat;
         border-radius: 30px;
         overflow: hidden;
         position: relative;
