theme switching done

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,6 +5,7 @@
 @import "reusables";
 @import "general";
 
+@import "sections/header";
 @import "sections/main";
 @import "sections/works";
 @import "sections/contact";
