--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -2,6 +2,10 @@
     font-family: 'Source Code Pro', monospace;
 }
 
+html {
+    // scroll-behavior: smooth;
+}
+
 body {
     background-color: $bg-primary-dark;
 }
