darken and blur header on scroll

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,7 +6,7 @@ $bg-secondary-dark: #0E0E0E;
 $text-primary-dark: #fff;
 $text-secondary-dark: #E4E4E4;
 
-$elements-bg-dark: #252525;
+$elements-bg-dark: #333232;
 
 $accent-color-dark: #33184C;
 
@@ -18,7 +18,7 @@ $bg-secondary-light: #E2E2E2;
 $text-primary-light: #292929;
 $text-secondary-light: #363636;
 
-$elements-bg-light: #999999;
+$elements-bg-light: #9b9b9b;
 
 $accent-color-light: #FC815F;
 
