--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -2,3 +2,27 @@
     max-width: 1120px;
     margin: 0 auto;
 }
+
+.tooltip {
+    position: relative;
+
+    &::after {
+        content: attr(data-tooltip);
+        position: absolute;
+        white-space: nowrap;
+        top: -50px;
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 10px;
+        color: $text-primary-dark;
+        background-color: lighten(rgba($elements-bg-dark, 0.3), 10%);
+        backdrop-filter: blur(4.5px);
+        -webkit-backdrop-filter: blur(4.5px);
+        border-radius: 10px;
+    }
+
+    &_bottom::after {
+        top: auto;
+        bottom: -50px;
+    }
+}
