--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -1,3 +1,8 @@
+.container {
+    max-width: 1120px;
+    margin: 0 auto;
+}
+
 .section-title {
     font-weight: 600;
     font-size: $title-size;
