--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,8 +1,7 @@
 @import "reset";
 @import "variables";
 @import "mixins";
-@import "utils";
-@import "reusables";
+@import "common";
 @import "general";
 
 @import "sections/header";
