animation and additional information when sending a message through the form

--- a/src/scss/themes/_light.scss
+++ b/src/scss/themes/_light.scss
@@ -94,6 +94,12 @@
             }
         }
 
+        &__final-content {
+            img {
+                filter: invert(75%);
+            }
+        }
+
         &__input[type="text"],
         &__textarea {
             background-color: $elements-bg-light;
