--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,6 +10,8 @@ $elements-bg-dark: #333232;
 
 $accent-color-dark: #33184C;
 
+$error-color-dark: #e66363;
+
 // light mode variables
 
 $bg-primary-light: #e8e8e8;
@@ -21,6 +23,8 @@ $text-secondary-light: #363636;
 $elements-bg-light: #9b9b9b;
 
 $accent-color-light: #FC815F;
+
+$error-color-light: #ea1717;
 
 // font variables
 
