--- a/src/scss/themes/_light.scss
+++ b/src/scss/themes/_light.scss
@@ -100,6 +100,17 @@
             }
         }
 
+        &__input-error {
+            color: $error-color-light;
+        }
+    
+        &__show-error {
+            .contact__input[type="text"],
+            .contact__textarea { 
+                box-shadow: 0 0 2px 2px $error-color-light;
+            }
+        }
+
         &__input[type="text"],
         &__textarea {
             background-color: $elements-bg-light;
