changed some colors

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,7 +6,7 @@ $bg-secondary-dark: #0E0E0E;
 $text-primary-dark: #fff;
 $text-secondary-dark: #E4E4E4;
 
-$elements-bg-dark: #333232;
+$elements-bg-dark: #212126;
 
 $accent-color-dark: #33184C;
 
@@ -20,7 +20,7 @@ $bg-secondary-light: #E2E2E2;
 $text-primary-light: #292929;
 $text-secondary-light: #363636;
 
-$elements-bg-light: #9b9b9b;
+$elements-bg-light: #b5aca7;
 
 $accent-color-light: #FC815F;
 
